--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -38,12 +38,13 @@
                         <!--android:layout_height="match_parent" />-->
 
                     <ImageButton
-                        android:layout_width="48dp"
+                        android:layout_width="56dp"
                         android:layout_height="48dp"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
                         android:onClick="playVideo"
-                        android:src="@android:drawable/ic_media_play"/>
+                        android:scaleType="center"
+                        android:src="@drawable/ic_youtube"/>
 
                     <TextView
                         android:id="@+id/txt_title_detail"
@@ -113,13 +114,13 @@
                         tools:text="rating 5"/>
                 </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:text="@string/str_txt_videos"
-                    android:layout_marginTop="8dp"/>
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textStyle="bold"-->
+                    <!--android:textSize="16sp"-->
+                    <!--android:text="@string/str_txt_videos"-->
+                    <!--android:layout_marginTop="8dp"/>-->
 
             </LinearLayout>
 
