--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.android.tesrv.DetailMovie"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#eee">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -136,7 +137,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingTop="8dp"
-                    android:paddingBottom="8dp">
+                    android:paddingBottom="2dp">
 
                     <TextView
                         android:id="@+id/header_title_similar"
@@ -174,7 +175,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingTop="8dp"
-                    android:paddingBottom="8dp">
+                    android:paddingBottom="2dp">
 
                     <TextView
                         android:id="@+id/header_title_recomend"
