--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/refresh_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.android.tesrv.MainActivity"
+    tools:context="com.depeloper.android.imdb_movies.MainActivity"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:background="#eee">
